added Donate Button

--- a/index.html
+++ b/index.html
@@ -28,21 +28,24 @@
                 have been submerged, power stations are down, and over 380 schools have been closed or impacted.
             </p>
     </div>
-    <a class="link-button"> Donate Now </a>
-    <h2>Donate Today </h2>
-    <p>
-        The extreme flooding has caused heartbreaking damage across north-eastern Bangladesh putting 1.6 million
-        children at risk
-    </p>
+</section>
+<section>
+    <div>
+        <a class="link-button"> Donate Now </a>
+        <h2>Donate Today </h2>
+
+        <p> The extreme flooding has caused heartbreaking damage across north-eastern Bangladesh putting 1.6 million
+            children at ride it. </p>
+    </div>
     <p>100<br> 200<br> 500 <br> 1000 </p>
     <h2>Donate Now</a></h1>
     </h2>
     <h1> Our Donate Plan</h1>
-    <section>
-        <p> Food For Family</p><br>Children are in need, crowded in shelters for multiple days and facing a high
-        risk.
-    </section>
-    </body>
+</section>
+<p> Food For Family</p><br>Children are in need,<br>crowded in shelters for multiple days and facing a high
+risk.
+</section>
+</body>
 </section>
 
 </html>
